<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myTasksActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/loginBtnMainPage"
        android:layout_width="100dp"
        android:layout_height="42dp"
        android:backgroundTint="#C6008AD4"
        android:text="Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLogin"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Already have an Account ?"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupBtnMainPage" />

    <TextView
        android:id="@+id/usernameTasks"
        android:layout_width="232dp"
        android:layout_height="39dp"
        android:layout_marginTop="100dp"
        android:text="My Tasks"
        android:textColor="#B7201919"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userTeam"
        android:layout_width="232dp"
        android:layout_height="39dp"
        android:text="TeamName"
        android:textColor="#B7201919"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTasks" />

    <!--    <TextView-->
    <!--        android:id="@+id/task2"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:text="Task 2"-->
    <!--        android:textColor="#CD3E3E"-->
    <!--        android:textSize="18sp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.846"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/task1" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/task3"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:text="Task 3"-->
    <!--        android:textColor="#DD1111"-->
    <!--        android:textSize="18sp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.846"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/task2" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/task1"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="88dp"-->
    <!--        android:text="Task 1"-->
    <!--        android:textColor="#EC3939"-->
    <!--        android:textColorHint="#8A1414"-->
    <!--        android:textSize="18sp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.846"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/usernameTasks" />-->

    <Button
        android:id="@+id/addTaskbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="335dp"
        android:backgroundTint="#00BCD4"
        android:text="Add Task"
        app:layout_constraintEnd_toStartOf="@+id/allTasksbtn"
        app:layout_constraintHorizontal_bias="0.855"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userTeam" />

    <Button
        android:id="@+id/allTasksbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="96dp"
        android:backgroundTint="#00BCD4"
        android:text="All Tasks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tasksRecycelerView"
        app:layout_constraintVertical_bias="0.078" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasksRecycelerView"
        android:layout_width="138dp"
        android:layout_height="190dp"
        android:background="#BD92C5"
        android:backgroundTint="#CDE8EC"
        app:layout_constraintBottom_toTopOf="@+id/addTaskbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userTeam" />

    <Button
        android:id="@+id/signupBtnMainPage"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:backgroundTint="#C6008AD4"
        android:text="Signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSignup"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Don't have an Account ?"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allTasksbtn" />

    <ImageView
        android:id="@+id/logoutBtnLogo"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="35dp"
        app:layout_constraintBottom_toTopOf="@+id/usernameTasks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toEndOf="@+id/settingImgBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logout" />

    <ImageView
        android:id="@+id/settingImgBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="320dp"
        android:layout_marginTop="35dp"
        app:layout_constraintBottom_toTopOf="@+id/usernameTasks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settings" />

</androidx.constraintlayout.widget.ConstraintLayout>