<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="backToHomeFromDetailsBtn" type="id" />
    <item name="settingImgBtn" type="id" />
    <item name="myTasksActivity" type="id" />
</resources>